	* cl_showposition - Shows your position.
	* cl_showvelocity - Shows your velocity.	
	* These will probably be replaced with a more full-featured debug at some point.
* Fixed bug where pressing X would make you say "score" (it used to bring up the old leaderboard)
* Don't enforce TDM rules on non-TDM.
* Complete rewrite of how text is drawn.
	* Supports arbitrary fonts.
	* Not used for all text currently. Needs to be ported to the menus as of 2/21, used in the console and chat though.
* Used detail brush optimisation in z_tdm_subway to reduce its size from 11.5mb to 5mb.
* Added Quake 3 color codes, with extensions:
	* Originals: ^0 - Black, ^1 - Red, ^2 - Green, ^3 - Yellow, ^4 - Blue, ^5 - Light Blue, ^6 - Pink, ^7 - White
	* Extended: ^8 - Grey, ^9 - Light Grey, ^a - Orange, ^b - Brown, ^c - Purple, ^d - Bright pink, ^e - Gold, ^f - Deep blue
	* Any invalid color codes are printed
* Added new cl_system_font cvar - it controls the system font. If you set it to an invalid value, it resets to the default.
* Changed "say" and "say_team" messages to "Chat: " and "Chat (Team): " and made them green and blue respectively.
* Chat messages (svc_print) no longer have the high bit set on client receive - this was done to make them have the green color in the quake 2 character set, but this is no longer required in the new system and was therefore corrupting the text.
* Removed already dead CTRL and ALT bindings from default.cfg.

Version 0.04-pre4
February 10, 2024
* Fix TDM end screen not displaying.
* Push zombies away if they hit a player while being spawned. This should prevent players from being trapped by zombies.
* Reset the state of all active UIs on connect and disconnect (should at least mitigate "stuck UI" bugs)
* Directors killing zombies don't get frags anymore. Players killing zombies have a separate score tallied up for that. Not sure what to do with this rn... Directors killing zombies lose that score.